--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -39,11 +39,6 @@
                         <input type="number" min="0" th:field="*{maxquality}" class="form-control" id="maxquality" placeholder="max quality">
                         <span th:if="${#fields.hasErrors('maxquality')}" th:errors="*{maxquality}" class="text-danger"></span>
                     </div>
-                    <div th:if="*{min != ''}" class="form-group col-md-3">
-                        <label for="min" class="col-form-label">Min requirements</label>
-                        <input type="text" th:field="*{min}" class="form-control" id="min" placeholder="min requirements">
-                        <span th:if="${#fields.hasErrors('min')}" th:errors="*{min}" class="text-danger"></span>
-                    </div>
                     <div class="form-group col-md-3">
                         <label for="dt" class="col-form-label">Expire date</label>
                         <input type="date" th:field="*{dt}" class="form-control" id="dt" placeholder="expire date">
@@ -57,6 +52,16 @@
                             <option th:text="Droppable" th:value="'2'"></option>
                         </select>
                         <span th:if="${#fields.hasErrors('nt')}" th:errors="*{nt}" class="text-danger"></span>
+                    </div>
+                    <div th:if="*{min != ''}" class="form-group col-md-6">
+                        <label for="min" class="col-form-label">Min requirements</label>
+                        <input type="text" th:field="*{min}" class="form-control" id="min" placeholder="min requirements">
+                        <span th:if="${#fields.hasErrors('min')}" th:errors="*{min}" class="text-danger"></span>
+                    </div>
+                    <div th:if="*{up != ''}" class="form-group col-md-6">
+                        <label for="up" class="col-form-label">Up parameters</label>
+                        <input type="text" th:field="*{up}" class="form-control" id="up" placeholder="up parameters">
+                        <span th:if="${#fields.hasErrors('up')}" th:errors="*{up}" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="row">
