edit "back" button name

--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -16,7 +16,7 @@
                 <h3 class="navbar-brand" th:text="${'Edit item ' + item.txt}"></h3>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/items(owner=${item.userId})}">Home</a>
+                        <a class="nav-link" th:href="@{/items(owner=${item.userId})}">Back to user items</a>
                     </li>
                 </ul>
             </div>
