--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="/">Back to users list</a>
                     </li>
                 </ul>
             </div>
