--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,9 +11,9 @@
         <title>Users</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand nav-link" href="/">Users</a>
+                <a class="navbar-brand nav-link" href="#">Users</a>
             </div>
             <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/users}">
                 <input type="search" class="form-control mr-sm-2" placeholder="Enter login..." aria-label="Search" id="search-input" name="search">
