--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -13,7 +13,10 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-white fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand nav-link" href="#">User items</a>
+            </div>
             <div class="container">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
@@ -22,10 +25,8 @@
                 </ul>
             </div>
         </nav>
-        <div th:switch="${userItems.size()}" class="container my-5">
-            <h2 th:case="0">No items yet!</h2>
-            <div th:case="*" class="col-md-8">
-                <h2>User items</h2>
+        <div class="container my-5">
+            <div class="col-md-8">
                 <table class="table table-hover table-striped table-responsive-md">
                     <thead>
                         <tr>
