--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -13,7 +13,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <h3 class="navbar-brand" th:text="${'Edit user ' + user.login}"></h3>
+                <a class="navbar-brand nav-link" href="#" th:text="${'Edit user ' + user.login}"></a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home</a>
