--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -25,7 +25,8 @@
         </nav>
         <div class="container my-5">
             <div class="col-md-8">
-                <table class="table table-hover table-striped table-responsive-md">
+                <h3 th:if="${userItems.isEmpty()}" class="text-center">This user have no items yet</h3>
+                <table th:if="${!userItems.isEmpty()}" class="table table-hover table-striped table-responsive-md">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -62,20 +63,18 @@
         </div>
 
         <div class="container my-5">
-            <div class="col-md-6">
-                <form action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/additem(owner=${userId})}">
-                    <div class="form-group">
-                        <label for="item_template" class="col-form-label">Want to add some?</label>
-                        <select th:field="${itemTemplateWrapper.item}" id="item_template" class="form-control selectpicker" data-live-search="true">
-                            <option th:each="template : ${items}"
-                                    th:value="${template.id}"
-                                    th:text="${template}">
-                            </option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-success">Add item</button>
-                </form>
-            </div>
+            <form class="row g-3" action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/additem(owner=${userId})}">
+                <label for="item_template">Want to add some?</label>
+                <div class="col-md-5">
+                    <select th:field="${itemTemplateWrapper.item}" id="item_template" class="form-control selectpicker" data-live-search="true">
+                        <option th:each="template : ${items}"
+                                th:value="${template.id}"
+                                th:text="${template}">
+                        </option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-success col-auto">Add item</button>
+            </form>
         </div>
     </body>
 
