--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -45,12 +45,9 @@
             <nav aria-label="Pagination" th:if="${totalPages > 1}">
                 <ul class="pagination justify-content-center font-weight-medium">
                     <th:block th:each="i : ${#numbers.sequence(1, totalPages)}"
-                              th:with="validPage=${i == 1 || (i >= curPage - 3 && i <= curPage + 3) || i == totalPages}">
-                        <li th:if="${validPage}" class="page-item" th:classappend="${curPage eq i} ? 'active'">
-                            <a class="page-link svg-icon" th:href="@{/users(page=${i})}" th:text="${i}"></a>
-                        </li>
-                        <li class="page-item disabled" th:if="${not validPage and (i == curPage - 4 or i == curPage + 4)}">
-                            <a class="page-link" href="#">...</a>
+                              th:with="isDisabled=${i == curPage - 4 || i == curPage + 4}, validPage=${i == 1 || (i >= curPage - 3 && i <= curPage + 3) || i == totalPages}">
+                        <li th:if="${validPage || isDisabled}" th:class="page-item" th:classappend="${curPage == i} ? 'active' : (${isDisabled && !validPage} ? 'disabled')">
+                            <a th:class="page-link" th:text="${isDisabled && !validPage} ? '...' : ${i}" th:href="@{/users(page=${i})}"></a>
                         </li>
                     </th:block>
                 </ul>
