Navbar style smallfix

--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -13,13 +13,14 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <h3 class="navbar-brand" th:text="${'Edit item ' + item.txt}"></h3>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/items(owner=${item.userId})}">Back to user items</a>
-                    </li>
-                </ul>
+<!--                <h3 class="navbar-brand" th:text="${'Edit item ' + item.txt}"></h3>-->
+                <a class="navbar-brand nav-link" href="#" th:text="${'Edit item ' + item.txt}"></a>
             </div>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/items(owner=${item.userId})}">Back to user items</a>
+                </li>
+            </ul>
         </nav>
         <div class="container my-5">
             <form action="#" th:action="@{/update/items(itemId=${item.id})}" th:object="${item}" method="post">
