--- a/src/main/resources/templates/add-or-upd-user.html
+++ b/src/main/resources/templates/add-or-upd-user.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mt-5">
-                        <button type="submit" class="btn btn-success">Add<i class="fas fa-user-plus ml-2"></i></button>
+                        <button type="submit" class="btn btn-success">Save<i class="fas fa-user-plus ml-2"></i></button>
                     </div>
                 </div>
             </form>
