--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -13,12 +13,12 @@
     </head>
 
     <body>
-        <nav th:fragment="common_nav (navText)" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <nav th:fragment="common_nav (brandTxt, linkTxt, linkHref)" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container">
-                <a class="navbar-brand nav-link" href="#" th:text="${navText}"></a>
+                <a class="navbar-brand nav-link" href="#" th:text="${brandTxt}"></a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" th:href="${linkHref}" th:text="${linkTxt}"></a>
                     </li>
                 </ul>
             </div>
