--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -1,26 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/shards.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-
-        <title>Update Item</title>
-    </head>
+    <head th:replace="~{fragments/layout :: common_header ('HeckZero :: update item')}"></head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-            <div class="container">
-                <a class="navbar-brand nav-link" href="#" th:text="${'Edit item ' + item.txt}"></a>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/items(owner=${item.userId})}">Back to user items</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <nav th:replace="~{fragments/layout :: common_nav ('Edit item ' + ${item.txt}, 'Back to user items', @{/items(owner=${item.userId})})}"></nav>
         <div class="container my-5">
             <form action="#" th:action="@{/update/items(itemId=${item.id})}" th:object="${item}" method="post">
                 <div class="row">
