--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -8,21 +8,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+        <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/icon.png}">
 
         <title>Items</title>
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand nav-link" href="#">User items</a>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Back to users list</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <nav th:replace="~{fragments/layout :: common_nav ('User items', 'Home', '/')}"></nav>
         <div class="container my-5">
             <div class="col-md-8">
                 <h3 th:if="${userItems.isEmpty()}" class="text-center">This user have no items yet</h3>
