--- a/src/main/resources/templates/add-or-upd-user.html
+++ b/src/main/resources/templates/add-or-upd-user.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head th:replace="~{fragments/layout :: common_header ('HeckZero :: user management')}"></head>
     <body>
-        <nav th:replace="~{fragments/layout :: common_nav (${title})}"></nav>
+        <nav th:replace="~{fragments/layout :: common_nav (${title}, 'Home', '/')}"></nav>
         <div class="container my-5">
             <form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
                 <div class="row">
