--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand nav-link" href="/users">Users</a>
-            </div>
+        </div>
             <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/users}">
                 <input type="search" class="form-control mr-sm-2" placeholder="Enter login..." aria-label="Search" id="search-input" name="search">
                 <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
@@ -33,7 +33,7 @@
                     </tr>
                 </tbody>
             </table>
-            <nav th:if="${totalPages > 1}" th:replace="~{fragments/layout :: common_pagination (${totalPages}, ${curPage}, '/users' + (${search} ? '?search=' + ${search} : ''))}"></nav>
+            <nav th:replace="~{fragments/layout :: common_pagination (${totalPages}, ${curPage}, '/users' + (${search} ? '?search=' + ${search} : ''))}"></nav>
         </div>
     </body>
 </html>
