add nav condition

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -24,7 +24,7 @@
             </div>
         </nav>
         <nav th:fragment="common_pagination (totalP, currP, path)">
-            <ul class="pagination justify-content-center font-weight-medium">
+            <ul th:if="${totalP > 1}" class="pagination justify-content-center font-weight-medium">
                 <th:block th:each="i : ${#numbers.sequence(1, totalP)}"
                           th:with="isDisabled=${i == currP - 4 || i == currP + 4}, validP=${i== 1 || (i >= currP - 3 && i <= currP + 3) || i == totalP}">
                     <li th:if="${validP || isDisabled}" th:class="page-item" th:classappend="${currP == i} ? 'active' : (${isDisabled && !validP} ? 'disabled')">
