--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
         <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/icon.png}">
 
-        <title>Items</title>
+        <title>Heckzero :: user items</title>
     </head>
 
     <body>
