--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-    <head th:replace="~{fragments/layout :: common_header ('HeckZero :: user management')}"></head>
+    <head th:replace="~{fragments/layout :: common_header ('HeckZero :: users')}"></head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
